docs(catalog): align CLAUDE.md with implemented state; add Kafka/Redis/replica sections
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>